# cpp_dyncasts_benchmark

./: README.md  build-llvm.py  build_.sh  chrome_run_time.py  download.sh  download_chromium.sh  download_v8.sh  profilecombiner.py  statscombiner.py
cmake/blender/dyncast-pgo/: CMakeCache.txt
cmake/blender/fulllto/: CMakeCache.txt
cmake/blender/fulllto-dyncastopt/: CMakeCache.txt
cmake/blender/thinlto/: CMakeCache.txt
cmake/blender/thinlto-dyncastopt/: CMakeCache.txt
cmake/chromium/: args-sanitize.gn  args.gn  fulllto-dyncastopt.patch  fulllto.patch  origin-lto.patch  origin-thin.patch  sanitize-lto.patch  sanitize-thin.patch  sanitize.patch  thinlto-dyncastopt.patch  thinlto.patch
cmake/v8/: fulllto-dyncastopt.patch  fulllto.patch  thinlto-dyncastopt.patch  thinlto.patch
plot/: plot_chrome.py  plot_code_size.py  plot_compile_time.py  plot_llvm.py  plot_memory.py  plot_optimization.py  plot_rtti_remove.py  plot_runtime.py
